[package]
name = "unbound-derive"
version = "0.1.2"
edition = "2021"
description = "Derive macros for the unbound library"
license = "MIT"
repository = "https://github.com/sdiehl/unbound"
documentation = "https://docs.rs/unbound-derive"
readme = "README.md"
keywords = ["derive", "macro", "binding", "substitution", "alpha-equivalence"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
