[package]
name = "unbound"
version = "0.1.0"
edition = "2021"

[dependencies]
unbound-derive = { version = "0.1.0", path = "../unbound-derive" }
thiserror = { workspace = true }

[[example]]
name = "lambda"
path = "examples/lambda.rs"

[[example]]
name = "system_f"
path = "examples/system_f.rs"

[dev-dependencies]
